fix(ld-select): current value not visible due to incorrect z-order
Resolves #373

--- a/src/liquid/components/ld-select/ld-select.css
+++ b/src/liquid/components/ld-select/ld-select.css
@@ -205,6 +205,13 @@
 
 .ld-select__btn-trigger {
   overflow: hidden;
+
+  &:not(.ld-select__btn-trigger--detached) {
+    .ld-tether-enabled.ld-tether-target-attached-bottom & {
+      border-bottom-left-radius: 0px;
+      border-bottom-right-radius: 0px;
+    }
+  }
 }
 
 :where(.ld-select),
